--- a/RA.ConsoleApp/RA.ConsoleApp.csproj
+++ b/RA.ConsoleApp/RA.ConsoleApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RA.DAL\RA.DAL.csproj" />
     <ProjectReference Include="..\RA.Database\RA.Database.csproj" />
     <ProjectReference Include="..\RA.Dto\RA.DTO.csproj" />
