SQL Server Config: Temporarily changed string
Temporarily changed string till it is automatically managed

--- a/RA.UI.StationManagement/appsettings.json
+++ b/RA.UI.StationManagement/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "mariadb": "server=localhost;Port=3306;database=raprod;user=root;password="
+    "mariadb": "server=localhost;Port=6668;database=raprod;user=root;password=12345678"
   },
   "AppSettings": {
     "Environment": "prod",
